replace ml-px with ml-1px. Fix different small spacing problems

--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -650,6 +650,7 @@ For example if you have white-space: nowrap on some element (to truncate it).
 .mb-auto{margin-bottom:auto;}
 .ml-1{margin-left:0.25rem;}
 .ml-1\.5{margin-left:0.375rem;}
+.ml-1px{margin-left:1px;}
 .ml-2{margin-left:0.5rem;}
 .ml-3{margin-left:0.75rem;}
 .ml-4{margin-left:1rem;}
